Quick fix on top bar z-index of anon channel page

--- a/css/anon.css
+++ b/css/anon.css
@@ -19,6 +19,7 @@
 .anonView .navigation {
   position: absolute;
   top: 0;
+  z-index: 2;
 }
 
 /* specific to the prototypes until we implement the share options */
